# X-Tetris

./: CMakeLists.txt  Doxyfile  README.md
Libraries/: auxiliary.h  bot.h  dataStructure.h  field.h  menu.h  palette.h  raylib.h  scoreboard.h  tetramino.h
Savings/: scoreboard.txt
Sources/: auxiliary.c  bot.c  field.c  main.c  menu.c  scoreboard.c  tetramino.c
docs/html/: annotated.html  auxiliary_8h.html  auxiliary_8h_source.html  bot_8h.html  bot_8h_source.html  classes.html  data_structure_8h_source.html  dir_06aa3ad3e835cba264200075a5c80c27.html  dir_0c8feb518e5d9990fcc95c506ee69724.html  dir_0e9d14cc344304d0b842bc7845933e57.html  dir_2c2a8c5929c86a39d7024401a678535b.html  dir_39df675ed7a8f0093f2e4ab27f81a370.html  dir_94360d32944c5bbc1f0617f67a937f11.html  dir_ae621e5de72d9b427a981a30c65aec87.html  dir_e6267fdea4b34bf460cdbb221c2e33de.html  field_8h.html  field_8h_source.html  files.html  globals.html  globals_func.html  index.html  menu.js  menu_8h.html  menu_8h_source.html  palette_8h_source.html  scoreboard_8h.html  scoreboard_8h_source.html  structentry-members.html  structentry.html  structevaluated_move-members.html  structevaluated_move.html  structpiece_info-members.html  structpiece_info.html  structpiece_type-members.html  structpiece_type.html  tetramino_8h.html  tetramino_8h_source.html
docs/latex/: annotated.tex  auxiliary_8h.tex  auxiliary_8h_source.tex  bot_8h.tex  bot_8h_source.tex  data_structure_8h_source.tex  field_8h.tex  field_8h_source.tex  files.tex  menu_8h.tex  menu_8h_source.tex  palette_8h_source.tex  refman.tex  scoreboard_8h.tex  (+7 more)
(+25 files in other folders)
